@@ -145,5 +145,8 @@
   <index role="2.12">
     <title>Index of new symbols in 2.12</title>
   </index>  
+  <index role="2.14">
+    <title>Index of new symbols in 2.14</title>
+  </index>  
   
 </book>
