@@ -199,6 +199,10 @@ g_type_module_register_type
 g_type_module_add_interface
 g_type_module_register_enum
 g_type_module_register_flags
+
+G_DEFINE_DYNAMIC_TYPE
+G_DEFINE_DYNAMIC_TYPE_EXTENDED
+
 <SUBSECTION Standard>
 G_TYPE_MODULE
 G_IS_TYPE_MODULE
