@@ -1,3 +1,8 @@
+2006-12-29 Matthias Clasen  <mclasen@redhat.com>
+
+	* gtypemodule.h: Define G_DEFINE_DYNAMIC_TYPE and
+	and _EXTENDED variant.  (#334437)
+
 Fri Dec 15 2006  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtype.c (instance_real_class_get): Dereference the pointer 
