@@ -1,3 +1,9 @@
+2006-12-29  Matthias Clasen  <mclasen@redhat.com>
+
+	* tests/gobject/Makefile.am:
+	* tests/gobject/dynamictype.c: New test for dynamic type 
+	registration macros. 
+
 Thu Dec 28 21:14:45 2006  Tim Janik  <timj@imendio.com>
 
 	* glib/gslice.c: removed pthread-dependant debugging bits, the code
